--- a/bibliography.bib
+++ b/bibliography.bib
@@ -205,3 +205,9 @@
   pages={18},
   year={2008}
 }
+
+@mics{openapi2020github,
+  title={{OpenAPI Specification}},
+  year={2020},
+  howpublished={\url{https://github.com/OAI/OpenAPI-Specification/}}
+}
