--- a/from-os-to-api.tex
+++ b/from-os-to-api.tex
@@ -61,6 +61,7 @@ To help us model and document the APIs more precisely, OpenAPI specifications ca
 
 
 \section{What is OpenAPI specification}
+\label{sec:openapi}
 OpenAPI specification is a way to describes and document an API. Moreover, it is described in a  machine-readable format (in YAML and JSON). In addition to machine-readable format, an interactive UI can be generated from the specification as well.
 
 Two major versions of OpenAPI specification are currently used. The older one is version 2, previously known as Swagger. The newer one which was standardized in 2016 and become overseen by the OpenAPI Initiative \cite{openapi2020main} later is version 3. There are not so many diferences between those versions, however, version 3 included breaking changes which means that new major version needed to be issued. Furhermore, there are also converter between the two versions. We will now focuse on the newer one as its gaining more acceptance in the ecosystem. Version 3 with generated UI can be seen in figure \ref{fig:openapi-specification}.
