--- a/implementation.tex
+++ b/implementation.tex
@@ -2,3 +2,6 @@
 In this chapter we discuss the implementation of the fuzzer.
 % - crossterm to run in all terminals (not just unix ones)
 % - all above mentioned fuzzers were implemented in dynamic language - Python
+% - arbitrary to generate input
+% - use native certs
+% - openapiv3 crate parse & openapi_utils to dereference
