Fix tipos in bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -152,13 +152,13 @@
   publisher={" O'Reilly Media, Inc."}
 }
 
-@mics{afl2019docs,
+@misc{afl2019docs,
   title={{More about AFL}},
   year={2019},
   howpublished={\url{https://afl-1.readthedocs.io/en/latest/about_afl.html}}
 }
 
-@mics{apiFuzz2020github,
+@misc{apiFuzz2020github,
   title={{apiFuzz}},
   year={2020},
   howpublished={\url{https://github.com/viralpoetry/api-fuzz}}
@@ -173,25 +173,25 @@
   organization={IEEE}
 }
 
-@mics{tntFuzzer2020github,
+@misc{tntFuzzer2020github,
   title={{TnT-Fuzzer}},
   year={2020},
   howpublished={\url{https://github.com/Teebytes/TnT-Fuzzer}}
 }
 
-@mics{pyjfuzz2020github,
+@misc{pyjfuzz2020github,
   title={{PyJFuzz}},
   year={2020},
   howpublished={\url{https://github.com/mseclab/PyJFuzz}}
 }
 
-@mics{gitea2020web,
+@misc{gitea2020web,
   title={{Gitea}},
   year={2020},
   howpublished={\url{https://gitea.com/}}
 }
 
-@mics{vault2020github,
+@misc{vault2020github,
   title={{Vault}},
   year={2020},
   howpublished={\url{https://github.com/hashicorp/vault}}
@@ -206,7 +206,7 @@
   year={2008}
 }
 
-@mics{openapi2020github,
+@misc{openapi2020github,
   title={{OpenAPI Specification}},
   year={2020},
   howpublished={\url{https://github.com/OAI/OpenAPI-Specification/}}
