Add detailed architecture description

--- a/analysis-of-exiting-work.tex
+++ b/analysis-of-exiting-work.tex
@@ -11,6 +11,7 @@ We may say that apiFuzz is a smart fuzzer as it is able to determine the structu
 Finally, the apiFuzz is not aware of the internal structure of the fuzzed program. As a result, it is able to fuzz targets without having the access to the target's source code or even a binary. Additionaly, since apiFuzz fuzzes a single request to single endpoint it is improbable to change the state of the web service. For instance, if it would fuzz one endpoint that creates some object and anotherone that retrieves the object it may, the result of the second request might be affected by the first one. The combination of statelessness with black-box technique makes the paralelization trivial and apiFuzz takes advantage of it.
 
 \section{TnT-Fuzz}
+\label{sec:tnt-fuzz}
 The next fuzzer we will describe is TnT-Fuzz \cite{tntFuzzer2020github}. One could think of  TnT-Fuzz as an apiFuzz scaled up. While apiFuzz fuzzes single endpoint, TnT-Fuzz fuzzes all of them. Moreover, it automates the exploration of different endpoints by parsing the OpenAPI specification. From the specification it also gets the correct input types as well as where in the request they should be placed. For example, in request headers, body od \texttt{url} query parameters.
 
 Nevertheless, slight difference from apiFuzz can be seen when it comes to input creation. TnT-Fuzz will create the payload in a two steps. First, it will generate random input of correct type. Then, if the request body is in JSON format, it will mutate the input too. Tnt-Fuzz uses PyJFuzz fuzzing framework for fuzzing JSON inputs \cite{pyjfuzz2020github}. A worth to mention fact is that apiFuzz uses the PyJFuzz fuzzing framework as well. Hence we can forsee that TnT-Fuzz will behave rather equivalently as apiFuzz. It as well augments the JSON keys and therefore fuzzes the JSON parser rather that the business logic of the web service. Moreover, the grammar rules are broken one more time - when the input type is JSON object, which is most of the cases. Then TnT-Fuzz will not parse the whole structure of the JSON object but generate a random one instead.
