Finish architecture chapter

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \graphicspath{ {./images/} }
 
 \linespread{1.25} % hodnota 1.25 by mala zodpovedat 1.5 riadkovaniu
+\setcounter{tocdepth}{3}
 
 % -------------------
 % --- Definicia zakladnych pojmov
