Finish implementation chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -211,3 +211,39 @@
   year={2020},
   howpublished={\url{https://github.com/OAI/OpenAPI-Specification/}}
 }
+
+@misc{openapiv32020github,
+  title={{OpenAPI v3}},
+  year={2020},
+  howpublished={\url{https://github.com/glademiller/openapiv3}}
+}
+
+@misc{openapiutils2020github,
+  title={{Openapi Utils}},
+  year={2020},
+  howpublished={\url{https://github.com/JordiPolo/oas_proxy/tree/master/openapi_utils}}
+}
+
+@misc{arbitrary2020github,
+  title={{Arbitrary}},
+  year={2020},
+  howpublished={\url{https://github.com/rust-fuzz/arbitrary}}
+}
+
+@misc{rand2020github,
+  title={{Rand}},
+  year={2020},
+  howpublished={\url{https://github.com/rust-random/rand}}
+}
+
+@misc{crossterm2020github,
+  title={{Crossterm}},
+  year={2020},
+  howpublished={\url{https://github.com/crossterm-rs/crossterm}}
+}
+
+@misc{tuirs2020github,
+  title={{tui-rs}},
+  year={2020},
+  howpublished={\url{https://github.com/fdehau/tui-rs/}}
+}
