--- a/from-os-to-api.tex
+++ b/from-os-to-api.tex
@@ -97,6 +97,7 @@ servers:
 
 The most informative and therefore most essential section of the OpenAPI specification is \textbf{paths}. The path section consists of list of path objects definitions, where each definition describes one resource (URI path). Here we may notice the interconnection between REST design strategy and OpenAPI specification. For each resouce there are defined methods that correspond to the CRUD operations for manipulation of the resource. Every method of a resouce describes id great detail how the request to the described resouce should look like. It defines the request body, its content type, structure and types. Similarly it defines the parameters. From the parameters definition we determine where they are located, whether it is a path, headers, cookies or query parameters. What is their structure, types and if they are required. In addition to possible inputs of the resouce, the method definition states the possible outputs as well - responses. The definition of responses supplies list of response objects. Every response object defines a HTTP status code, headers and content that can be received as response from particular resouce-method pair. The content object is rather akin to the request body object. It defines the content type, structure and types of the fields in the structure as well.
 
+\label{subsec:components}
 As you now APIs reuse many things and the same holds true for their descriptions. For instance, the structure of error message may be the same for every resource. Another example can be lisitng an objects and getting a single one. The structure of responses or even requests might be rather alike. One can imagine how tedious and error-prone would it be to write the same definitions to numerous resources. For this particular reason OpenAPI specification defines a section called \textbf{components}. In components section user may define structures, as a single point of truth, that can be subsequently referenced in other sections. An example can be seen in figure \ref{fig:openapi-specification} where the \texttt{ErrorResponse} object is defined in components section and referenced from response object in \texttt{/user/\{userID\}} resource.
 
 The last top-level section that we will explore is \textbf{security} section. This section ilustrates which authorization schemes the API uses. The security scheme consists of type, for instance apiKey, http, oauth2, openIdConnect or mutualTLS, name, its location in the request and other information based on the scheme type. The authorization scheme can be then applied per resource-method pair or to the whole API.
